--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+settings.json
 *.db
 .env*
 !.env-sample
@@ -9,7 +10,6 @@ logs/
 schedules/
 storage/
 dbt_packages/
-
 target/
 dbt_modules/
 
@@ -158,7 +158,6 @@ cython_debug/
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
