--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,19 +23,24 @@ models:
   project:
     marts:
       +materialized: table
-      +tags: marts
       assessments:
         +schema: assessments
+        +tags: edfi
       attendance:
         +schema: attendance
+        +tags: edfi
       core:
         +schema: core
+        +tags: edfi
       grades:
         +schema: grades
+        +tags: edfi
       row_level_security:
         +schema: row_level_security
+        +tags: edfi
       surveys:
         +schema: surveys
+        +tags: edfi
     staging:
       +materialized: table
       +schema: staging
