--- a/models/marts/attendance/attendance.yml
+++ b/models/marts/attendance/attendance.yml
@@ -74,4 +74,4 @@ models:
         - student_display_name
     columns:
       - name: is_latest_date_avaliable
-        description: TRUE/FALSE if the date record is the lastest date available for the respective school year
+        description: true/false if the date record is the lastest date available for the respective school year
