Updates function name to be lowercase

--- a/models/staging/edfi/stg_edfi.yml
+++ b/models/staging/edfi/stg_edfi.yml
@@ -16,7 +16,7 @@ models:
     description: ""
     tests:
       - unique:
-          column_name: "CONCAT(school_year, '-', local_education_agency_id)"
+          column_name: "concat(school_year, '-', local_education_agency_id)"
 
   - name: stg_edfi_schools
     description: ""
